Add 'thank you span'

--- a/james ferreira book ex/1. simple app/index.html
+++ b/james ferreira book ex/1. simple app/index.html
@@ -3,4 +3,5 @@
  <input type="email" name="email" id="email" placeholder="Enter your email">
  <input type="submit" value="Subscribe">
  </form>
+ <span id="thank_you">Thank you!</span>
 </div>
