--- a/james ferreira book ex/1. simple app/index.html
+++ b/james ferreira book ex/1. simple app/index.html
@@ -1,3 +1,5 @@
+<?!= HtmlService.createHtmlOutputFromFile('CSS').getContent(); ?>
+
 <div id="subscribe_form">
  <form>
  <input type="email" name="email" id="email" placeholder="Enter your email">
